Some tests for player, friendRequest and mainBoard